JavaPro/src/main/java/lesson5/task1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-configmap
spec:
  containers:
    - name: test-container
      image: busybox
      command: ["sleep", "3600"]
