JavaPro/src/main/java/lesson5/service-demo-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
spec:
  selector:
    app: demo-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
